# Candidates-2021

./: .gitignore  README.md
candidates_ws/src/beverage_dispenser/: CMakeLists.txt  package.xml
candidates_ws/src/beverage_dispenser/action/: BeverageDispenser.action
candidates_ws/src/beverage_dispenser/scripts/: dispenser_client.py  dispenser_server.py  dispenser_utils.py
candidates_ws/src/env_analysis/: CMakeLists.txt  package.xml
candidates_ws/src/env_analysis/script/: env_analysis.py
candidates_ws/src/my_robot_msgs/: CMakeLists.txt  package.xml
candidates_ws/src/my_robot_msgs/action/: Workstation.action
candidates_ws/src/my_robot_msgs/scripts/: client.py  server.py
candidates_ws/src/party_navigation/: CMakeLists.txt  package.xml
candidates_ws/src/party_navigation/action/: Navigation.action
candidates_ws/src/party_navigation/scripts/: navigation_client.py  navigation_server.py  navigation_utils.py
candidates_ws/src/speech/: CMakeLists.txt  package.xml
candidates_ws/src/speech/scripts/: speech_service.py  speech_service_client.py
candidates_ws/src/speech/srv/: SpeechService.srv
candidates_ws/src/system_stimuli/: CMakeLists.txt  package.xml
candidates_ws/src/system_stimuli/action/: Workstation.action
candidates_ws/src/system_stimuli/scripts/: mechanical_stimuli.py  shutdown_system.py
